Fixed some issues that was pointed out in the pull-request review